<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PiLauncher</string>
    <string name="default_apps_group">Apps</string>
    <string name="add_group">Add group</string>
    <string name="delete_group">Delete group</string>
    <string name="edit_group">Edit group</string>
    <string name="app_details">App details</string>
    <string name="apps_hidden">Hidden</string>
    <string name="delete_app">Uninstall</string>
    <string name="request_permission">Click here to give Permission</string>
    <string name="game_info">Game Information</string>
    <string name="clear_cache">Clear Icon Cache</string>

    <string name="settings_apps_enable">Enable editing</string>
    <string name="settings_apps_disable">Disable editing</string>
    <string name="settings_device">Device settings</string>
    <string name="settings_look">Launcher settings</string>
    <string name="settings_platforms">Platforms</string>
    <string name="settings_tweaks">System tweaks</string>
    <string name="background_opacity">Background opacity</string>
    <string name="icons_size">Icons size</string>
    <string name="show_app_names">Show app names</string>
    <string name="start_shortcut">Open the launcher with Explore icon from the system dashboard.</string>

    <string name="service_app_shortcut">App shortcut</string>
    <string name="service_explore_app">Explore app</string>
    <string name="service_os_updater">OS updater</string>

    <string name="accesibility_label">Replace Explore app</string>
    <string name="accesibility_button">Open settings</string>
    <string name="accesibility_tooltip" >Enable 爪 Launcher in accesibility menu</string>
    <string name="icons_style">Icons style</string>
    <string name="update_header">New version available</string>
    <string name="autorun">Launch 爪 Launcher with system startup</string>
    <string name="failed_to_launch">Failed to launch</string>
    <string name="default_tools_group">Tools</string>

    <string-array name="sort_options">
        <item>↓ Name</item>
        <item>↑ Name</item>
        <item>↓ Recent</item>
        <item>↑ Recent</item>
        <item>↓ Install date</item>
        <item>↑ Install date</item>
    </string-array>
    <string name="show_near">Docked Modus</string>
    <string name="stats_tooltip">Change \"STATS\" Permission</string>
    <string name="aspect_ratio">Keep Icon Aspect Ratio</string>
    <string name="stats_playtime">Playtime</string>
    <string name="stats_last30">Last 30 days</string>
    <string name="stats_today">Today</string>
    <string name="stats_total">Android total</string>
    <string name="stats_starts">Starts</string>
    <string name="stats_sessions">Sessions (may be inaccurate if the game does not send \"MOVE_TO_BACKGROUND\")</string>
    <string name="stats_lastsession">Last session</string>
    <string name="stats_longestsession">Longest session</string>
    <string name="stats_perday">Ø per day</string>
    <string name="stats_perstart">Ø per start</string>
    <string name="stats_timestamp">Timestamp</string>
    <string name="stats_sessionstart">Session start</string>
    <string name="stats_sessionend">Session end</string>
    <string name="stats_lastusage">Last usage</string>
    <string name="stats_firstentry">First entry</string>
    <string name="stats_lastentry">Last entry</string>
    <string name="stats_close">Close</string>
    <string name="stats_statistics">Game statistics</string>
    <string name="stats_ok">OK</string>
    <string name="stats_nostats">No usage data found</string>
    <string name="backup_backup">Backup</string>
    <string name="backup_restore">Restore</string>
    <string name="backup_invalid">Invalid Backup File</string>
    <string name="backup_traversal">Zip Path Traversal</string>
    <string name="backup_couldnot">Could Not Create Directory:</string>
    <string name="backup_invalidzip">Invalid Zip Entry Name</string>
    <string name="backup_created">Backup Created</string>
    <string name="reset_launcher">Reset Launcher</string>
    <string name="toast_deleteiconquestion">All cached icons will be deleted. Continue?</string>
    <string name="toast_yes">Yes</string>
    <string name="toast_icondeleted">Icon cache has been deleted</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_resetlauncher">Reset Launcher</string>
    <string name="toast_deletesettingsquestion">All settings will be deleted. Continue?</string>
    <string name="toast_settingsdeleted">Launcher has been reset</string>
    <string name="allstats_statistics">Game Statistics</string>
    <string name="allstats_today">Today</string>
    <string name="allstats_week">Week</string>
    <string name="allstats_month">Month</string>
    <string name="allstats_period">Time Period:</string>
    <string name="allstats_games">Games:</string>
    <string name="allstats_total">Total Play Time:</string>
    <string name="allstats_notfound">No games found in this time period.</string>
    <string name="allstats_starts">Starts</string>
    <string name="perm_usagestats">USAGE_STATS Permission</string>
    <string name="perm_question">Would you like to enable the usage access permission so that PiLauncher can display playtime and the size of a game?</string>
    <string name="perm_yes">Yes</string>
    <string name="perm_no">No</string>
    <string name="perm_info">(This can be changed later in the PiLauncher settings)</string>
    <string name="check_update">Automatically check for updates</string>
    <string name="tblauncher">Integrated Team Beef Launcher</string>
    <string name="qzd_deletemod">Delete mod?</string>
    <string name="qzd_reallydelete">Really delete?</string>
    <string name="qzd_cancel">Cancel</string>
    <string name="qzd_delete">Delete</string>
    <string name="qzd_connecting">Connecting...</string>
    <string name="qzd_extractionfailed">Extraction failed</string>
    <string name="qzd_unknownerror">Unknown error</string>
    <string name="qzd_installed">installed.</string>
    <string name="qzd_downloadfailed">Download failed:</string>
    <string name="qzd_gameplaymods">Gameplay Mods</string>
    <string name="qzd_mappacks">Map Packs</string>
    <string name="qzd_vrweapons">VR Weapons</string>
    <string name="qzd_models">Models</string>
    <string name="qzd_others">Others</string>
    <string name="qzd_deleted">deleted.</string>
    <string name="qzd_couldnotdelete">Could not delete</string>
    <string name="qzd_clear">CLEAR</string>
    <string name="qzd_start">START</string>
</resources>