<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <android.widget.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/settings_look"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/theme0"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bkg_default" />

            <ImageView
                android:id="@+id/theme1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bkg_glass" />

            <ImageView
                android:id="@+id/theme2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bkg_rgb" />

            <ImageView
                android:id="@+id/theme3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bkg_skin" />

            <ImageView
                android:id="@+id/theme4"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bkg_underwater" />

            <ImageView
                android:id="@+id/theme_custom"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bkg_custom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.widget.TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/background_opacity"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/bar_opacity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:progressBackgroundTint="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/icons_style"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/style0"
                    android:layout_width="138dp"
                    android:layout_height="138dp"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:padding="5dp"
                    android:src="@drawable/com_valvesoftware_alyx_banners" />

                <ImageView
                    android:id="@+id/style1"
                    android:layout_width="138dp"
                    android:layout_height="138dp"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:padding="5dp"
                    android:src="@drawable/com_valvesoftware_alyx_icons" />

                <ImageView
                    android:id="@+id/style2"
                    android:layout_width="138dp"
                    android:layout_height="138dp"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:padding="5dp"
                    android:src="@drawable/com_valvesoftware_alyx_tenaldo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <android.widget.TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/icons_size"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/bar_scale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:progressBackgroundTint="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Switch
                android:id="@+id/checkbox_names"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/show_app_names"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:trackTint="@color/switch_track_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.widget.TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accesibility_label"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/open_accesibility"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2C2C2C"
                    android:text="@string/accesibility_button"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/accesibility_tooltip"
                android:textAlignment="center"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.widget.TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_tooltip"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/open_stats"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2c2c2c"
                    android:text="@string/accesibility_button"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="💾 ACTION_USAGE_ACCESS_SETTINGS"
                android:textAlignment="center"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Switch
                android:id="@+id/checkbox_autorun"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="true"
                android:text="@string/autorun"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:trackTint="@color/switch_track_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pico_docked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <Switch
                android:id="@+id/checkbox_near"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/show_near"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:trackTint="@color/switch_track_color" />
        </LinearLayout>

        <Button
            android:id="@+id/clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/clear_cache"
            android:textColor="#000000" />

    </LinearLayout>

</ScrollView>